single-color pathway

--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -194,75 +194,75 @@ If required, the cube can be mirrored and used with excitation coming from the l
 The excitation path is optimized for a flat-top profile illumination of the whole 221um-by-221um field of view.</div>
 <tr>
 <td>1</td> <!--id-->
-<td id="fancyboxtitle_21">Breadboard</td> <!--title-->
+<td id="fancyboxtitle_20">Breadboard</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=MB4560/M">MB4560/M</a> breadboard on 
 <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=P30/M">P30/M</a> posts</a> and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=PS10M">PS10M</a> spacers.</div></td> <!--description-->
-<td><img src="images/breadboard.jpg" class="fancybox" id=21></td> <!--image-->
+<td><img src="images/breadboard.jpg" class="fancybox" id=20></td> <!--image-->
 <td></td> <!--notes-->
 </tr>
 <tr>
-<td>1</td> <!--id-->
+<td>2</td> <!--id-->
 <td id="fancyboxtitle_21">Fiber mount</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=SM1FCA">SM1FCA</a> fiber mount in <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CP33/M">CP33/M</a> cage plate</a></div></td> <!--description-->
 <td><img src="images/fibermount.jpg" class="fancybox" id=21></td> <!--image-->
 <td></td> <!--notes-->
 </tr>
 <tr>
-<td>2</td> <!--id-->
+<td>3</td> <!--id-->
 <td id="fancyboxtitle_22">Collimator</td> <!--title-->
 <td><div class="discTitle">Thorlabs - Collimation lens <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-050-A">AC254-050-A</a> in <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1">CXY1</a> translating lens mount</div></td> <!--description-->
-<td><img src="images/cxy1.jpg" class="fancybox" id=23></td> <!--image-->
+<td><img src="images/cxy1.jpg" class="fancybox" id=22></td> <!--image-->
 <td style="vertical-align: middle;">Collimates the input beam to a 1/e2 diameter of 6mm (for 488nm), the required input diameter for the piShaper. A shearing interferometer makes the collimation process easier. <br>See <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/9783527687732.app2"> Heintzmann, Practical Guide to Optical Alignment</a></td> <!--notes-->
 </tr>
 <tr>
-<td>3</td> <!--id-->
+<td>4</td> <!--id-->
 <td id="fancyboxtitle_23">Quarter-Wave plate</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AQWP05M-600">AQWP05M-600</a> achromatic quarter-wave plate in <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=PRM1">PRM1</a> rotation mount</div></td> <!--description-->
-<td><img src="images/rotationmount.jpg" class="fancybox" id=24></td> <!--image-->
+<td><img src="images/rotationmount.jpg" class="fancybox" id=23></td> <!--image-->
 <td></td> <!--notes-->
 </tr>
 <tr>
-<td>4</td> <!--id-->
+<td>5</td> <!--id-->
 <td id="fancyboxtitle_24">piShaper</td> <!--title-->
 <td><div class="discTitle">AdlOptica - <a href="http://pishaper.com/shaper.html">piShaper 6_6_VIS</a></div>Transforms the gaussian illumination into a flat-top profile</td> <!--description-->
 <td><img src="images/pishaper.png" class="fancybox" id=24></td> <!--image-->
 <td style="vertical-align: middle;"><a href="https://www.nature.com/articles/s41467-019-09064-6">Stehr, Stein et al.</td> <!--notes-->
 </tr>
 <tr>
-<td>5</td> <!--id-->
+<td>6</td> <!--id-->
 <td id="fancyboxtitle_25">2.5x beam expander</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-100-A">AC254-100-A</a> 100mm and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=ACN254-040-A">ACN254-040-A</a> -40mm lenses in a cage system with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1">CXY1</a> mounts and a <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB25/M">KB25/M</a> kinematic base</div>Magnifies the beam diameter 2.5fold and can be easily swapped or removed due to its magnetic kinematic base. Raised up to 64.7mm beam height with standard adapter plates.</td> <!--description-->
 <td><img src="images/telescope.png" class="fancybox" id=25></td> <!--image-->
 <td></td> <!--notes-->
 </tr>
 <tr>
-<td>6</td> <!--id-->
+<td>7</td> <!--id-->
 <td id="fancyboxtitle_26">FRAP lens flip mount</td> <!--title-->
 <td><div class="discTitle">Thorlabs - FRAP lens <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-150-A">AC254-150</a> in a motorized flip mount <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=MFF101/M">MFF101/M </a></div>FRAP lens to focus excitation light in the sample plane for bleaching experiments.</td> <!--description-->
 <td><img src="images/flipmount.jpg" class="fancybox" id=26></td> <!--image-->
 <td></td> <!--notes-->
 </tr>
-<td>7</td> <!--id-->
+<td>8</td> <!--id-->
 <td id="fancyboxtitle_27">TIRF angle stage</td> <!--title-->
 <td><div class="discTitle">Thorlabs - Motorized stage <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KMTS25E/M">MTS25E/M</a> bundle</div>Motorized control over incident angle to change between TIRF, HILO and epifluorescence illumination</td> <!--description-->
 <td><img src="images/stage.jpg" class="fancybox" id=27></td> <!--image-->
 <td></td> <!--notes-->
 </tr>
-<td>8</td> <!--id-->
+<td>9</td> <!--id-->
 <td id="fancyboxtitle_28">TIRF angle cage assembly</td> <!--title-->
 <td><div class="discTitle">Thorlabs - Right-angle elliptical mirror mount <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KCB1E/M">KCB1E/M</a> and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1">CXY1</a> mount on cage rods. 
 </div>Mounting mirror and lens onto one assembly allows to keep the focal point of the TIRF lens to overlap with the objective's back focal plane for all incident angles.</td> <!--description-->
 <td><img src="images/stageassembly.png" class="fancybox" id=28></td> <!--image-->
 <td></td> <!--notes-->
 </tr>
-<td class="homemade">9</td> <!--id-->
+<td class="homemade">10</td> <!--id-->
 <td id="fancyboxtitle_29">Cage assembly adapter plate</td> <!--title-->
 <td><div class="discTitle">CNC-milled - <a href="drawings/kmts25e_adapter.pdf">Technical drawing</a></div>Cage assembly is mounted onto the plate with with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CP02B"> CP02B mounting brackets</a>  and raised to 64.7mm beam height.</td> <!--description-->
 <td><img src="images/kmts25e_adapter.png" class="fancybox" id=29></td> <!--image-->
 <td></td> <!--notes-->
 </tr>
 <tr>
-<td>10</td> <!--id-->
+<td>11</td> <!--id-->
 <td id="fancyboxtitle_30">TIRF lens</td> <!--title-->
 <td><div class="discTitle">Edmund Optics - <a href="https://www.edmundoptics.com/">LENS ACH 25x250 VIS 0 Inked</a></div>TIRF lens in CXY1 mount to focus excitation light on back-focal plane of objective. 250mm focal length.</td> <!--description-->
 <td><img src="images/tirflens.png" class="fancybox" id=30></td> <!--image-->
@@ -280,18 +280,18 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <th>Notes</th>
 </tr>
 <td>1</td> <!--id-->
-<td id="fancyboxtitle_40">Tube lens</td> <!--title-->
+<td id="fancyboxtitle_39">Tube lens</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=TTL200-A">TTL200-A</a> tube lens in a <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY2">CXY2</a> mount.</div>200 mm focal length. 
 Cage system is mounted via Thorlabs <a href="https://www.thorlabs.de/thorproduct.cfm?partnumber=AE4E6M">AE4E6M</a> thread adapter and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=LCP01/M">LCP01/M</a> cage plate.</td> <!--description-->
-<td><img src="images/tubelens.png" class="fancybox" id=40></td> <!--image-->
+<td><img src="images/tubelens.png" class="fancybox" id=39></td> <!--image-->
 <td><img src="images/tubelens_assembly.png" class="fancybox" id=40>Cage plate doubles as a mount for an alignment target.</td> <!--notes-->
 </tr>
 <tr>
 <td class="homemade">2</td> <!--id-->
-<td id="fancyboxtitle_41">Adjustable aperture</td> <!--title-->
+<td id="fancyboxtitle_40">Adjustable aperture</td> <!--title-->
 <td><div class="discTitle">Custom made - <a href="drawings/aperture.pdf">Technical drawing</a> with <a href="https://www.newport.com/p/SM-25">Newport SM-25</a> as micrometer drives</div>The aperture is placed in the image plane and 
 restricts the image horizontally so up to three separate, spatially identical images can be displayed on a single camera.</td> <!--description-->
-<td><img src="images/aperture.png" style="bottom:10px;" class="fancybox" id=41></td> <!--image-->
+<td><img src="images/aperture.png" style="bottom:10px;" class="fancybox" id=40></td> <!--image-->
 <td style="vertical-align: middle;">Cropping the image in the horizontal dimension provides a bit more wiggle room in the emission image splitting optics, which would otherwise be prone to cause vignetting/shading of the image.</td> <!--notes-->
 </tr>
 <tr>
@@ -333,12 +333,20 @@ and <a href="https://www.semrock.com/filterdetails.aspx?id=ff01-680/42-25">Semro
 <td></td> <!--notes-->
 </tr>
 <tr>
-<td>7</td> <!--id-->
+<td>8</td> <!--id-->
 <td id="fancyboxtitle_46">Camera</td> <!--title-->
 <td><div class="discTitle"><a href="https://www.photometrics.com/products/prime-family/primebsi">Teledyne Photometrics prime BSI sCMOS camera</a></div>2048-by-2048 pixels, 
 with <a href="https://www.aquatuning.nl/waterkoeling/sets-en-systemen/externe-sets/22164/alphacool-eiswand-360-solo-black?c=4788">Alphacool Eiswand</a> watercooling.</td> <!--description-->
 <td><img src="images/primebsi.png" class="fancybox" id=46></td> <!--image-->
 <td style="vertical-align: middle;"><a href="https://www.photometrics.com/applications/customer-stories/tirf-microscopy-bsi-ganzinger">Prime BSI customer story</a></td> <!--notes-->
+</tr>
+<tr>
+<td>9</td> <!--id-->
+<td id="fancyboxtitle_46">Optional: single-color pathway</td> <!--title-->
+<td><div class="discTitle">Thorlabs<a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC508-200-A">AC508-200-A</a> lenses in two <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=LM2XY/M">LMXY2</a> mounts.</div> 
+Mirrors (before adjustable aperture and before camera) are on magnetic kinematic bases <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB25/M">KB25/M</a>.</td> <!--description-->
+<td><img src="images/.png" class="fancybox" id=46></td> <!--image-->
+<td style="vertical-align: middle;">Option emission pathway using two magnet-mounted mirrors and a 200mm-4f system. Filters can be borrowed from the three-color pathway.</td> <!--notes-->
 </tr>
 </table>
 
@@ -453,9 +461,9 @@ Alignment tips:<br>
 </tr>
 <tr>
 <td>1</td> <!--id-->
-<td id="fancyboxtitle_71">Laser triggering</td> <!--title-->
+<td id="fancyboxtitle_70">Laser triggering</td> <!--title-->
 <td><div class="discTitle">Custom made laser trigger box </div>Documentation to follow</td> <!--description-->
-<td><img src="images/triggerbox.png" class="fancybox" id=71></td> <!--image-->
+<td><img src="images/triggerbox.png" class="fancybox" id=70></td> <!--image-->
 <td></td> <!--notes-->
 </tr>
 <tr>
