--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -343,10 +343,10 @@ with <a href="https://www.aquatuning.nl/waterkoeling/sets-en-systemen/externe-se
 <tr>
 <td>9</td> <!--id-->
 <td id="fancyboxtitle_46">Optional: single-color pathway</td> <!--title-->
-<td><div class="discTitle">Thorlabs<a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC508-200-A">AC508-200-A</a> lenses in two <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=LM2XY/M">LMXY2</a> mounts.</div> 
+<td><div class="discTitle">Thorlabs <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC508-200-A">AC508-200-A</a> lenses in <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=LM2XY/M">LMXY2</a> mounts and removable 2" mirrors.</div> 
 Mirrors (before adjustable aperture and before camera) are on magnetic kinematic bases <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB25/M">KB25/M</a>.</td> <!--description-->
 <td><img src="images/.png" class="fancybox" id=46></td> <!--image-->
-<td style="vertical-align: middle;">Option emission pathway using two magnet-mounted mirrors and a 200mm-4f system. Filters can be borrowed from the three-color pathway.</td> <!--notes-->
+<td style="vertical-align: middle;">Optional emission pathway using two magnet-mounted mirrors and a 200mm-4f system. Filters can be borrowed from the three-color pathway.</td> <!--notes-->
 </tr>
 </table>
 
