--- a/K2TIRF/header.html
+++ b/K2TIRF/header.html
@@ -3,6 +3,7 @@
         <ul>
 		<li class="first"><a href="./index.html" target="_self">Main page</a></li>
 		<li class="first"><a href="./component_table.html" target="_self">Components</a></li>
+		<li class="first"><a href="./gqfocus.html" target="_self">Focus lock qgFocus</a></li>
 		<li class="first"><a href="./about.html" target="_self">About the project</a></li>
 		<br><hr style=" margin: 0.1em auto;">
 			<font style="line-height:0.5em;">
