added technical files

--- a/K2TIRF/qgfocus.html
+++ b/K2TIRF/qgfocus.html
@@ -60,7 +60,13 @@ The real text begins here.
 
 
 <div style="max-width:80%;">2020-10-21 more details will follow.</div>
-<li>test</li>
+<li><a href="./documentation/qgFocus/block_diagram.PNG">Block diagram</a></li>
+<li><a href="./documentation/qgFocus/qgFocus_components.xlsx">Component list</a></li>
+<li><a href="./documentation/qgFocus/E03_18_023_K2FocusLock_pcb Hammond 1590LLBBK.pdf">Circuit layout</a>, <a href="./documentation/qgFocus/E03_18_023_K2FocusLock_schematic.pdf">PCB layout</a></li>
+<li><a href="./documentation/qgFocus/E03.18.0023_K2_FocusLock.ioc">Microcontroller configuration file</a></li>
+<li>Technical drawings: <a href="./documentation/qgFocus/Focus Lock - Design_v1.0.pdf">Assembly</a>, <a href="./documentation/qgFocus/Mechanical_Hammond 1590LLBBK.pdf">Housing</a></li>
+
+
 
 
 <script type="text/javascript" src=".\javascript\slideshow.js"></script>
