added qgfocus pictures

--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -379,7 +379,7 @@ Alignment tips:<br>
 <td id="fancyboxtitle_50">qgFocus device</td> <!--title-->
 <td><div class="discTitle">Custom made focus lock with a <a href="https://www.parallax.com/product/28317">TSL1401</a> linescan sensor on a Thorlabs <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KM100B/M">KM100B/M</a> mount.</div> 128-pixel resolution with 63.5um (h) x 55.5um (w) pixels in post-mountable housing with USB output port</td> <!--description-->
 <td><img src="images/qgfocus.png" class="fancybox" id=50></td> <!--image-->
-<td></td> <!--notes-->
+<td>More details: <a href="./qgfocus.html">qgFocus focus lock</a> </td> <!--notes-->
 </tr>
 <tr>
 <td>2</td> <!--id-->
