--- a/K2TIRF/qgfocus.html
+++ b/K2TIRF/qgfocus.html
@@ -59,7 +59,43 @@ The real text begins here.
 <h1>Focus lock: qgFocus</h1>
 
 
-<div style="max-width:80%;">2020-10-21 more details will follow.</div>
+<div class="slideshow-container">
+<div style="max-width:50%;">
+<div class="mySlides fade">
+  <img src="documentation/qgFocus/assembly.PNG" style="width:100%">
+  <div class="text"> </div>
+</div>
+
+<div class="mySlides fade">
+  <img src="documentation/qgFocus/pcb.PNG" style="width:100%">
+  <div class="text"> </div>
+</div>
+
+<div class="mySlides fade">
+  <img src="documentation/qgFocus/block_diagram.PNG" style="width:100%">
+  <div class="text"> </div>
+</div>
+
+
+<div class="mySlides fade">
+  <img src="documentation/qgFocus/schematic.PNG" style="width:100%">
+  <div class="text"> </div>
+</div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+  <span class="dot" onclick="currentSlide(4)"></span> 
+</div>
+</div></div>
+<div style="max-width:80%;">more details will follow (2020-10-21) </div>
 <li><a href="./documentation/qgFocus/block_diagram.PNG">Block diagram</a></li>
 <li><a href="./documentation/qgFocus/qgFocus_components.xlsx">Component list</a></li>
 <li><a href="./documentation/qgFocus/E03_18_023_K2FocusLock_pcb Hammond 1590LLBBK.pdf">Circuit layout</a>, <a href="./documentation/qgFocus/E03_18_023_K2FocusLock_schematic.pdf">PCB layout</a></li>
