added gelimager filter

--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -509,7 +509,7 @@ Alignment tips:<br>
 <td style="vertical-align: middle;">Screws into objective thread and helps aligning the emission path by providing a strong collimated light source.  </td> <!--notes-->
 </tr>
 <td>2</td> <!--id-->
-<td id="fancyboxtitle_81">Two-component glue frequency source</td> <!--title-->
+<td id="fancyboxtitle_81">Two-component glue</td> <!--title-->
 <td><div class="discTitle">Picodent - <a href="https://www.picodent.de/artikel/831-picodent_twinsil.html"> Twinsil</a></div> Easily removable flexible silicone glue </td> <!--description-->
 <td><img src="images/picodent.png" class="fancybox" id=81></td> <!--image-->
 <td></td> <!--notes-->
