--- a/K2TIRF/frap.html
+++ b/K2TIRF/frap.html
@@ -56,55 +56,42 @@ The real text begins here.
 ##############################################################
  -->
 <section>
-<h1>Focus lock: qgFocus</h1>
-
-
-<div class="slideshow-container">
-<div style="max-width:50%;">
-<div class="mySlides fade">
-  <img src="documentation/qgFocus/assembly.PNG" style="width:100%">
-  <div class="text"> </div>
-</div>
-
-<div class="mySlides fade">
-  <img src="documentation/qgFocus/pcb.PNG" style="width:100%">
-  <div class="text"> </div>
-</div>
-
-<div class="mySlides fade">
-  <img src="documentation/qgFocus/block_diagram.PNG" style="width:100%">
-  <div class="text"> </div>
-</div>
-
-
-<div class="mySlides fade">
-  <img src="documentation/qgFocus/schematic.PNG" style="width:100%">
-  <div class="text"> </div>
-</div>
-
-<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-
+<h1>FRAP module</h1>
+For fluorescence recovery after photobleaching (FRAP) experiments, a lens is flipped into the optical path, changing the beam from collimated to focused in the sample plane.
+<br>
 <br>
 
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span> 
-  <span class="dot" onclick="currentSlide(2)"></span> 
-  <span class="dot" onclick="currentSlide(3)"></span> 
-  <span class="dot" onclick="currentSlide(4)"></span> 
-</div>
-</div></div>
-<li><a href="./documentation/qgFocus/block_diagram.PNG">Block diagram</a></li>
-<li><a href="./documentation/qgFocus/qgFocus_components.xlsx">Component list</a></li>
-<li><a href="./documentation/qgFocus/E03_18_023_K2FocusLock_pcb Hammond 1590LLBBK.pdf">Circuit layout</a>, <a href="./documentation/qgFocus/E03_18_023_K2FocusLock_schematic.pdf">PCB layout</a></li>
-<li><a href="./documentation/qgFocus/E03.18.0023_K2_FocusLock.ioc">Microcontroller configuration file</a></li>
-<li>Technical drawings: <a href="./documentation/qgFocus/Focus Lock - Design_v1.0.pdf">Assembly</a>, <a href="./documentation/qgFocus/Mechanical_Hammond 1590LLBBK.pdf">Housing</a></li>
+<figure style="max-width:1500px;">
+<a href="images/frapmount.jpg">
+<img src="images/frapmount.jpg" style="width:30%; padding-left:5%; "></a>
+<a href="images/FRAP_movie.gif">
+<img src="images/FRAP_movie.gif" style="width:30%; padding-left:5%; "></a>
+<a href="images/resultFRAP.png">
+<img src="images/resultFRAP.png" style="width:30%; padding-left:5%; "></a>
+<figcaption><strong>Left: </strong>: FRAP lens in a flip-mount for photobleaching experiments.<br> <strong>Middle: </strong>
+The mobility of a supported lipid bilayer can be estimated by adding a small percentage of fluorescent lipids and 
+observing the fluorescent recovery after a photobleching (FRAP) measurement. <br> <strong>Right: </strong> 
+FRAP experiment on a supported lipid bilayer. Fit based on <em>Soumpasis, Theoretical analysis of fluorescence photobleaching recovery experiments,
+Biophysical Journal 1983</em> </figcaption>
+</figure>
+
+<br>
+<br>
+<h2>Fluorescent labeling of the bilayer</h2>
+The dye ATTO390 is efficiently excited at 405nm and has a large stokes shift with an emission spectrum extending into the standard 'GFP' filter set range (525/50nm).<br> 
+
+By adding a small percentage of ATTO390 fluorescently labeled lipids in our supported lipid bilayer, we can asses the bilayer quality directly while still having three channels available for imaging reconstituted molecules.<br>
+First seen in <em>Carbone et al., Reconstitution of TCR-mediated segregation of CD45, PNAS 2017</em>
 
 
 
 
-<script type="text/javascript" src=".\javascript\slideshow.js"></script>
+<figure style="max-width:1500px;">
+<a href="images/405_atto390.PNG">
+<img src="images/405_atto390.PNG" style="width:90%; padding-left:5%; "></a>
+<figcaption><strong>Fig: </strong>: Absorption and Emission of ATTO-390 and the overlap with standard 'GFP' filter set. (fpbase.org) </figcaption>
+</figure>
+
 <script type="text/javascript" src=".\javascript\fancybox\jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src=".\javascript\fancybox\jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src=".\javascript\fancybox\jquery.fancybox-1.3.4.js"></script>
