--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -224,14 +224,14 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <tr>
 <td>5</td> <!--id-->
 <td id="fancyboxtitle_24">piShaper</td> <!--title-->
-<td><div class="discTitle">AdlOptica - <a href="http://pishaper.com/shaper.html">piShaper 6_6_VIS</a></div>Transforms the gaussian illumination into a flat-top profile</td> <!--description-->
+<td><div class="discTitle">AdlOptica - <a href="http://pishaper.com/shaper.html">piShaper 6_6_VIS</a> in <a href="https://www.standa.lt/products/catalog/optical_positioners?item=240&prod=five_axis_optical_mounts">Standa 5KOMA1 mount </a> on kinematic base <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB50/M">KB50/M</a></div>Transforms the gaussian illumination into a flat-top profile</td> <!--description-->
 <td><img src="images/pishaper.png" class="fancybox" id=24></td> <!--image-->
 <td style="vertical-align: middle;"><a href="https://www.nature.com/articles/s41467-019-09064-6">Stehr, Stein et al.</td> <!--notes-->
 </tr>
 <tr>
 <td>6</td> <!--id-->
 <td id="fancyboxtitle_25">2.5x beam expander</td> <!--title-->
-<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-100-A">AC254-100-A</a> 100mm and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=ACN254-040-A">ACN254-040-A</a> -40mm lenses in a cage system with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1">CXY1</a> mounts and a <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB25/M">KB25/M</a> kinematic base</div>Magnifies the beam diameter 2.5fold and can be easily swapped or removed due to its magnetic kinematic base. Raised up to 64.7mm beam height with standard adapter plates.</td> <!--description-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-100-A">AC254-100-A</a> 100mm and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=ACN254-040-A">ACN254-040-A</a> -40mm lenses in a cage system with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1">CXY1</a> mounts and a <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB25/M">KB25/M</a> kinematic base</div>Magnifies the beam diameter 2.5fold and can be easily swapped or removed due to its magnetic kinematic base. Raised up to 64.7mm beam height with standard adapter plates (<a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S7/M">BA2S7/M</a>, <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S6/M">BA2S6/M</a>).</td> <!--description-->
 <td><img src="images/telescope.png" class="fancybox" id=25></td> <!--image-->
 <td></td> <!--notes-->
 </tr>
@@ -250,7 +250,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 </tr>
 <td>9</td> <!--id-->
 <td id="fancyboxtitle_28">TIRF angle cage assembly</td> <!--title-->
-<td><div class="discTitle">Thorlabs - Right-angle elliptical mirror mount <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KCB1E/M">KCB1E/M</a> and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1">CXY1</a> mount on cage rods. 
+<td><div class="discTitle">Thorlabs - Right-angle elliptical mirror mount <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KCB1E/M">KCB1E/M</a> and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1Q">CXY1Q</a> mount on cage rods. 
 </div>Mounting mirror and lens onto one assembly allows to keep the focal point of the TIRF lens to overlap with the objective's back focal plane for all incident angles.</td> <!--description-->
 <td><img src="images/stageassembly.png" class="fancybox" id=28></td> <!--image-->
 <td></td> <!--notes-->
@@ -264,7 +264,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <tr>
 <td>11</td> <!--id-->
 <td id="fancyboxtitle_30">TIRF lens</td> <!--title-->
-<td><div class="discTitle">Edmund Optics - <a href="https://www.edmundoptics.com/">LENS ACH 25x250 VIS 0 Inked</a></div>TIRF lens in CXY1 mount to focus excitation light on back-focal plane of objective. 250mm focal length.</td> <!--description-->
+<td><div class="discTitle">Edmund Optics - <a href="https://www.edmundoptics.com/">LENS ACH 25x250 VIS 0 Inked</a></div>TIRF lens in CXY1Q mount (alternative: <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1">CXY1</a>) to focus excitation light on back-focal plane of objective. 250mm focal length.</td> <!--description-->
 <td><img src="images/tirflens.png" class="fancybox" id=30></td> <!--image-->
 <td></td> <!--notes-->
 </tr>
