--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -62,8 +62,8 @@ Please note that standard mirrors and mounts, posts, clamps, rails, cage rods, s
 <br>
 
 <figure style="max-width:900px;">
-<a href="images/K2_optical_path.svg">
-<img src="images/K2_optical_path.svg" style="width:100%; padding-left:5%; "></a>
+<a href="images/K2_optical_path.png">
+<img src="images/K2_optical_path.png" style="width:100%; padding-left:5%; "></a>
 <figcaption><strong>Fig 1</strong>: Overview of the optical path of the K2 TIRF. The individual components are explained in detail in the tables. 
 Schematic adapted from <a href="https://pubs.acs.org/doi/abs/10.1021/acs.nanolett.8b00875">Mücksch, Blumhardt et al.</a> </figcaption>
 </figure>
