dovetail translation stages added

--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -308,7 +308,7 @@ restricts the image horizontally so up to three separate, spatially identical im
 and three <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-300-A">1" AC254-300-A lenses</a> in <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=LMR1/M"> LMR1/M</a> fixed lens mounts.</div>
 4f-system to gain enough space to include dichroic mirrors and filters for separating the color channels.</td> <!--description-->
 <td><img src="images/emission_splitter_close.png" class="fancybox" id=42></td> <!--image-->
-<td><img src="images/4fsystem.jpg" class="fancybox" id=42>Three individual lenses make it easy to ensure focusing  of the same z-plane for the different wavelengths.</td> <!--notes-->
+<td><img src="images/4fsystem.jpg" class="fancybox" id=42>Three individual lenses make it easy to ensure focusing  of the same z-plane for the different wavelengths. Lenses can be moved along the optical path using <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=DT12/M">dovetail translation stages</a> mounted on rails.</td> <!--notes-->
 </tr>
 <tr>
 <td>5</td> <!--id-->
